themes/tundra/tundra.css
/* ... */
.dj_ie6 .tundra .dijitCalendarDecrease {
	background-image:url("images/arrowLeft.gif"); 
}

.tundra .dijitCalendarIncrease {
	background:url(images/arrowRight.png) no-repeat center center; 
}
.dj_ie6 .tundra .dijitCalendarIncrease {
	background-image:url("images/arrowRight.gif"); 
}

.tundra table.dijitCalendarContainer {
	font-size: 100%;
	border-collapse: collapse; 
	border-spacing: 0; 
	border: 1px solid #ccc; 
	margin: 0;
}

.tundra .dijitCalendarMonthContainer th {
	/* month header cell */
	background:white url("images/calendarMonthLabel.png") repeat-x top;
	padding-top:.3em;
	padding-bottom:.1em; 
	text-align:center; 
}
.dj_ie6 .tundra .dijitCalendarMonthContainer th {
	padding-top:.1em; 
	padding-bottom:0em; 
}

.tundra .dijitCalendarDayLabelTemplate {
	/* day of week labels */
	background:white url("images/calendarDayLabel.png") repeat-x bottom;
	font-weight:normal;
	padding-top:.15em;
	padding-bottom:0em;
	border-top: 1px solid #eeeeee;
	color:#293a4b;
	text-align:center;
}

.tundra .dijitCalendarMonthLabel {
	/* day of week labels */
	color:#293a4b;
	font-size: 0.75em;
	font-weight: bold;
	text-align:center;
}

.dj_ie7 .tundra .dijitCalendarDateTemplate,
.dj_ie6 .tundra .dijitCalendarDateTemplate {
	font-size: 0.8em;
}

.tundra .dijitCalendarDateTemplate {
	/* style for each day cell */
	font-size: 0.9em;
	font-weight: bold;
	text-align: center;
	padding: 0.3em 0.3em 0.05em 0.3em;
	letter-spacing: 1px;
}


.tundra .dijitCalendarPreviousMonth,
.tundra .dijitCalendarNextMonth 		{
	/* days that are part of the previous or next month */
	color:#999999;
	background-color:#f8f8f8 !important;
}

.tundra .dijitCalendarPreviousMonthDisabled,
.tundra .dijitCalendarNextMonthDisabled	{
	/* days that are part of the previous or next month - disabled*/
	background-color:#a4a5a6 !important;
}

.tundra .dijitCalendarCurrentMonth {
	/* days that are part of this month */
	background-color:white !important;
}

.tundra .dijitCalendarCurrentMonthDisabled {
	/* days that are part of this month - disabled */	
	background-color:#bbbbbc !important; 
}

.tundra .dijitCalendarDisabledDate {
	/* one or the other? */ 
	/* background: url(images/noX.gif) no-repeat center center !important; */
	text-decoration:line-through !important; 
	cursor:default !important;  
}

.tundra .dijitCalendarCurrentDate {
	/* cell for today's date */
	text-decoration:underline;
	font-weight:bold;
}

.tundra .dijitCalendarSelectedDate {
	/* cell for the selected date */
	background-color:#bbc4d0 !important;
	color:black !important;
}


.tundra .dijitCalendarYearContainer {
	/* footer of the table that contains the year display/selector */
	background:white url("images/calendarYearLabel.png") repeat-x bottom;
	border-top:1px solid #ccc;
}

.tundra .dijitCalendarYearLabel {
	/* container for all of 3 year labels */
	margin:0;
	padding:0.4em 0 0.25em 0;
	text-align:center;
}

.tundra .dijitCalendarSelectedYear {
	/* label for selected year */
	color:black;
	padding:0.2em;
	padding-bottom:0.1em;
	background-color:#bbc4d0 !important;
}

.tundra .dijitCalendarNextYear, 
.tundra .dijitCalendarPreviousYear {
	/* label for next/prev years */
	color:black !important;
	font-weight:normal;
}



/* inline edit boxen */
.tundra .dijitInlineValue {
	/* span around an inline-editable value when NOT in edit mode */
	padding:3px;
	margin:4px;
}


/* MOW: trying to get this to look like a mini-dialog.  Advised? */
.tundra .dijitInlineEditor {
	/* fieldset surrounding an inlineEditor in edit mode */
	display: inline-block;
	display: -moz-inline-stack;
	#display:inline;
	/*
	border: solid;
	border-color: #7788a0 #344257 #344257 #7788a0;
	border-width:1px 2px 2px 1px;
	-moz-border-radius:0px 2px 0px 2px;	make BL and TR corners indent on Moz so it looks like we have a shadow
	background-color:white;
	*/
}

.dijitInlineEditor .saveButton,
.dijitInlineEditor .cancelButton {
	margin:3px 3px 3px 0px;
}


/* spinner */

.tundra .dijitSpinner {}
.tundra .dijitSpinner input {
}




/****
		dijit.ProgressBar
 ****/
 
.tundra .dijitProgressBar {
	margin:2px 0px 2px 0px;
}

.tundra .dijitProgressBarEmpty{
	/* outer container and background of the bar that's not finished yet*/
	background:#ececec url("images/progressBarEmpty.png") repeat-x bottom left;
	border-color: #84a3d1;
}

.tundra .dijitProgressBarTile{
	/* inner container for finished portion when in 'tile' (image) mode */
	background:#cad2de url("images/progressBarFull.png") repeat-x top left;
}

.tundra .dijitProgressBarLabel {
	/* Set to a color that contrasts with both the "Empty" and "Full" parts. */
	color:#293a4b;
}

.tundra .dijitProgressBarIndeterminate .dijitProgressBarTile {
	/* use an animated gif for the progress bar in 'indeterminate' mode */
	background:#cad2de url("images/dijitProgressBarAnim.gif") repeat-x top left;
}

/****
 	SLIDER
****/

.tundra .dijitHorizontalSliderProgressBar {
	border-color: #aab0bb;
	background: #c0c2c5 url("images/sliderFull.png") repeat-x top left;
}

.tundra .dijitVerticalSliderProgressBar {
	border-color: #aab0bb;
	background: #c0c2c5 url("images/sliderFullVertical.png") repeat-y bottom left;
}

.tundra .dijitVerticalSliderRemainingBar {
	border-color: #b4b4b4;
	background: #dcdcdc url("images/sliderEmptyVertical.png") repeat-y bottom left;
}

.tundra .dijitHorizontalSliderRemainingBar {
	border-color: #b4b4b4;
	background: #dcdcdc url("images/sliderEmpty.png") repeat-x top left;
}

.tundra .dijitSliderBar {
	border-style: solid;
	outline:1px; 
	/* border-color: #b4b4b4; */
}

.tundra .dijitHorizontalSliderImageHandle {
	border:0px;
	width:16px;
	height:16px;
	background:url("images/preciseSliderThumb.png") no-repeat center center; 
	cursor:pointer; 
}
.dj_ie6 .dijitHorizontalSliderImageHandle {
	background-image:url("images/preciseSliderThumb.gif"); 
}

.tundra .dijitHorizontalSliderLeftBumper {
	border-left-width: 1px;
	border-color: #aab0bb;
	background: #c0c2c5 url("images/sliderFull.png") repeat-x top left;
}
/* ... */

